<resources>
    <!-- General -->
    <string name="app_name">SineBU</string>
    <string name="popular">POPULAR</string>
    <string name="top_rated">TOP RATED</string>
    <string name="upcoming">UPCOMING</string>
    <string name="now_playing">NOW PLAYING</string>
    <string name="search_title">Search</string>

    <!-- Strings related to Licences -->
    <string name="disclaimer">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>


    <!-- Strings related to Details -->
    <string name="summary">Summary</string>


    <!-- Strings related to Navigation -->
    <string name="title_activity_home">SineBU</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SineBU</string>
    <string name="nav_header_subtitle">selim@sinebu.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_settings">Settings</string>

    <string name="movies">Movies</string>
    <string name="tv">TV</string>
    <string name="people">People</string>
    <string name="discover">Discover</string>
    <string name="account">Account</string>
    <string name="login">Login</string>
    <string name="others">Others</string>

    <string name="licence">Licence</string>
    <string name="settings">Settings</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_language">Language</string>
    <string-array name="pref_language_titles">
        <item>English</item>
        <item>Türkçe</item>
    </string-array>
    <string-array name="pref_language_values">
        <item>en-EN</item>
        <item>tr-TR</item>
    </string-array>



</resources>
